--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "uniwawa-beauty",
   "private": true,
@@ -11,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emailjs/browser": "^4.4.1",
+    "firebase": "^10.0.0",
     "lucide-react": "^0.284.0",
-    "firebase": "^10.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
